--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -2,10 +2,9 @@
 <layout>
 
     <data>
-
         <variable
-            name="imageUrl"
-            type="String" />
+            name="book"
+            type="androidx.databinding.ObservableField&lt;com.example.bookshelf.data.entities.BookEntity&gt;" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -14,25 +13,26 @@
         android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="8dp">
+        android:paddingTop="28dp">
 
         <ImageView
             android:id="@+id/book_image"
-            android:layout_width="88dp"
-            android:layout_height="88dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:loadImageUrl="@{imageUrl}"
+            app:loadImageUrl="@{book.image}"
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/book_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="6dp"
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
+            android:paddingStart="4dp"
             android:singleLine="true"
+            android:text="@{book.title}"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintBottom_toTopOf="@+id/book_score"
             app:layout_constraintEnd_toStartOf="@+id/favorite_icon"
@@ -43,8 +43,10 @@
             android:id="@+id/book_score"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:paddingStart="4dp"
             android:textColor="@color/yellow"
             android:textSize="@dimen/sp_12"
+            android:text="@{String.valueOf(book.score)}"
             app:layout_constraintBottom_toTopOf="@id/book_publish_date"
             app:layout_constraintStart_toStartOf="@id/book_title"
             tools:text="4.5" />
@@ -53,8 +55,10 @@
             android:id="@+id/book_publish_date"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:paddingStart="4dp"
             android:textColor="@color/gray_lt"
             android:textSize="@dimen/sp_12"
+            app:setYear="@{book.publishedChapterDate}"
             app:layout_constraintBottom_toBottomOf="@id/book_image"
             app:layout_constraintStart_toStartOf="@id/book_title"
             tools:text="Published in 2022" />
@@ -64,7 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:src="@drawable/ic_favorite_gray"
+            android:src="@{book.favorite ? @drawable/ic_favorite_filled : @drawable/ic_favorite_gray}"
             app:layout_constraintBottom_toBottomOf="@id/book_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/book_image" />
